<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Image_Select"
        android:onClick="showImageSourceMenu"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gundyLogoView"
        app:srcCompat="@drawable/huseyinyagmurimage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:cardBackgroundColor="#1a1f23"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagekare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Write_text"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/kare" />

            <EditText
                android:id="@+id/EditText"
                android:layout_width="205dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@null"
                android:gravity="start|top"
                android:hint="@string/Write_text"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:maxLines="5"
                android:minLines="1"
                android:scrollbars="vertical"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </FrameLayout>

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/gundyLogoView"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/Logo_Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/micView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="12dp"
            android:onClick="speakToText"
            android:contentDescription="@string/Microfon_Image"
            android:src="@drawable/mic" />

        <ImageView
            android:id="@+id/closeView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="12dp"
            android:onClick="close"
            android:contentDescription="@string/Aplication_Close_Image"
            android:src="@drawable/close" />

        <ImageView
            android:id="@+id/heartView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="12dp"
            android:onClick="heartBtn"
            android:contentDescription="@string/Heart_Image"
            android:src="@drawable/heart" />

        <ImageView
            android:id="@+id/youtubeView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="12dp"
            android:onClick="youtubeBtn"
            android:contentDescription="@string/Youtube_Image"
            android:src="@drawable/youtube" />

        <ImageView
            android:id="@+id/senderView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/Sender_Image"
            android:onClick="writeSender"
            android:src="@drawable/send" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>